--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
     "start:prod": "webpack serve --config webpack/webpack.config.js --env env=prod",
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
+    "build:dev": "webpack --config webpack/webpack.config.js --env env=dev",
     "test": "jest"
   },
   "keywords": [],
@@ -23,40 +24,40 @@
     "typed-redux-saga": "^1.3.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.19",
-    "@types/lodash": "^4.14.165",
+    "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.12",
+    "@types/react-redux": "^7.1.15",
     "@types/redux-saga": "^0.10.5",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "dotenv-webpack": "^6.0.0",
-    "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "html-webpack-plugin": "5.0.0-alpha.15",
     "jest": "^26.6.3",
-    "less": "^3.13.0",
-    "less-loader": "^7.1.0",
-    "mini-css-extract-plugin": "^1.3.3",
+    "less": "^4.1.0",
+    "less-loader": "^7.2.1",
+    "mini-css-extract-plugin": "^1.3.4",
     "prettier": "^2.2.1",
     "react-hot-loader": "^4.13.0",
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.4.4",
-    "ts-loader": "^8.0.12",
+    "ts-loader": "^8.0.14",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.1.3",
-    "webpack": "^5.11.0",
+    "webpack": "^5.16.0",
     "webpack-bundle-analyzer": "^4.3.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.7.2"
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   }
 }
