Refactor project to have a separate UI and Data layer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,12 @@
     "target": "es5",
     "downlevelIteration": true,
     "paths": {
-      "@AppTypes": ["./src/types"],
+      "@AppTypes": ["./src/Cpre/types"],
+      "@Components": ["./src/Components"],
       "@Components/*": ["./src/Components/*"],
       "@Config": ["./src/Config/app.json"],
-      "@Containers/*": ["./src/Containers/*"],
-      "@Mock/*" : ["./src/Mock/*"],
       "@Core/*": ["src/Core/*"],
+      "@Mock/*" : ["./src/Mock/*"],
       "@Services/*": ["./src/Services/*"],
       "@Styles/*": ["./src/Styles/*"],
     },
