--- a/package.json
+++ b/package.json
@@ -24,12 +24,20 @@
     "typed-redux-saga": "^1.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.15",
+    "@types/react-redux": "^7.1.16",
     "@types/redux-saga": "^0.10.5",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-macros": "^3.0.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "dotenv-webpack": "^6.0.0",
@@ -44,7 +52,7 @@
     "html-webpack-plugin": "5.0.0-alpha.15",
     "jest": "^26.6.3",
     "less": "^4.1.0",
-    "less-loader": "^7.2.1",
+    "less-loader": "^7.3.0",
     "mini-css-extract-plugin": "^1.3.4",
     "prettier": "^2.2.1",
     "react-hot-loader": "^4.13.0",
@@ -54,8 +62,8 @@
     "ts-loader": "^8.0.14",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.1.3",
-    "webpack": "^5.16.0",
-    "webpack-bundle-analyzer": "^4.3.0",
+    "webpack": "^5.17.0",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
