--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": ".",
     "moduleResolution": "Node",
     "module": "es6",
-    "target": "es5",
+    "target": "ESNext",
     "downlevelIteration": true,
     "paths": {
       "@AppTypes": ["./src/Cpre/types"],
