--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,19 @@
 {
+  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
-    "outDir": "./dist/",
-    "baseUrl": ".",
-    "moduleResolution": "Node",
-    "module": "es6",
-    "target": "ESNext",
-    "downlevelIteration": true,
-    "paths": {
-      "@AppTypes": ["./src/Cpre/types"],
-      "@Components": ["./src/Components"],
-      "@Components/*": ["./src/Components/*"],
-      "@Config": ["./src/Config/app.json"],
-      "@Core/*": ["src/Core/*"],
-      "@Mock/*" : ["./src/Mock/*"],
-      "@Services/*": ["./src/Services/*"],
-      "@Styles/*": ["./src/Styles/*"],
-    },
     "allowSyntheticDefaultImports": true,
-    "jsx": "react",
+    "downlevelIteration": true,
     "forceConsistentCasingInFileNames": true,
+    "jsx": "react",
+    "module": "ES6",
+    "moduleResolution": "Node",
+    "outDir": "./dist/",
+    "pretty": true,
+    "resolveJsonModule": true,
+    "sourceMap": true,
     "strict": true,
     "strictNullChecks": true,
-    "resolveJsonModule": true,
-    "pretty": true,
-    "sourceMap": true
+    "target": "ES6"
   },
   "include": ["./src/**/*"],
   "exclude": ["node_modules", "dist"]
