--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "scripts": {
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
     "start:prod": "webpack serve --config webpack/webpack.config.js --env env=prod",
-    "build": "webpack --config webpack/webpack.config.js --env env=prod",
-    "build:dev": "webpack --config webpack/webpack.config.js --env env=dev",
-    "test": "jest"
+    "build": "webpack --config webpack/webpack.config.js --env env=dev",
+    "build:prod": "webpack --config webpack/webpack.config.js --env env=prod",
+    "test": "jest",
+    "format": "npx prettier --write src/"
   },
   "keywords": [],
   "author": "lkuoch",
   "license": "MIT",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
-    "classcat": "^4.1.0",
-    "fomantic-ui-css": "^2.8.7",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -26,44 +25,42 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/plugin-transform-typescript": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
-    "@babel/preset-typescript": "^7.12.7",
     "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@babel/runtime": "^7.12.5",
+    "@types/compression-webpack-plugin": "^6.0.4",
+    "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/redux-saga": "^0.10.5",
+    "@types/terser-webpack-plugin": "^5.0.2",
+    "@types/webpack": "^4.41.26",
     "babel-loader": "^8.2.2",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-macros": "^3.0.1",
     "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^7.1.2",
     "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.2.0",
     "dotenv-webpack": "^6.0.0",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-import-resolver-webpack": "^0.13.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "html-webpack-plugin": "5.0.0-alpha.15",
+    "html-minimizer-webpack-plugin": "^2.1.0",
+    "html-webpack-plugin": "5.0.0-alpha.9",
     "jest": "^26.6.3",
     "less": "^4.1.0",
     "less-loader": "^7.3.0",
-    "mini-css-extract-plugin": "^1.3.4",
     "prettier": "^2.2.1",
-    "react-hot-loader": "^4.13.0",
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^2.0.0",
-    "ts-jest": "^26.4.4",
-    "ts-loader": "^8.0.14",
+    "terser-webpack-plugin": "^5.1.1",
+    "ts-jest": "^26.5.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.1.3",
-    "webpack": "^5.17.0",
-    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack": "^5.19.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
