Add API middleware

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,6 +5,7 @@
       "@Components/*": ["./src/Components/*"],
       "@Core/*": ["src/Core/*"],
       "@Config": ["src/Config/app.prod.json"],
+      "@Middlewares/*": ["./src/Middlewares/*"],
       "@Mock/*": ["./src/Mock/*"],
       "@Services/*": ["./src/Services/*"],
       "@Store/*": ["./src/Store/*"],
