--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "redux-api-middleware": "^3.2.1",
     "typed-redux-saga": "^1.3.1"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "@types/redux-api-middleware": "^3.2.2",
     "@types/redux-saga": "^0.10.5",
     "@types/terser-webpack-plugin": "^5.0.2",
     "@types/webpack": "^4.41.26",
