--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
     "dotenv-webpack": "^6.0.0",
+    "fork-ts-checker-webpack-plugin": "^6.1.0",
     "html-minimizer-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "5.0.0-alpha.9",
     "jest": "^26.6.3",
