--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,13 +3,13 @@
     "baseUrl": ".",
     "paths": {
       "@Components/*": ["./src/Components/*"],
-      "@Core/*": ["src/Core/*"],
-      "@Config": ["src/Config/app.prod.json"],
+      "@Core/*": ["./src/Core/*"],
+      "@Config": ["./src/Config/app.prod.json"],
       "@Middlewares/*": ["./src/Middlewares/*"],
       "@Mock/*": ["./src/Mock/*"],
       "@Services/*": ["./src/Services/*"],
       "@Store/*": ["./src/Store/*"],
-      "@Styles/*": ["./src/Styles/*"]
+      "@Styles/*": ["./src/Styles/*"],
     }
   }
 }
