--- a/package.json
+++ b/package.json
@@ -21,21 +21,22 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-api-middleware": "^3.2.1",
+    "redux-in-worker": "^0.7.0",
     "typed-redux-saga": "^1.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/plugin-transform-typescript": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.12.13",
+    "@babel/plugin-transform-typescript": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.13",
+    "@babel/runtime": "^7.12.13",
     "@types/compression-webpack-plugin": "^6.0.4",
     "@types/css-minimizer-webpack-plugin": "^1.1.1",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/redux-api-middleware": "^3.2.2",
@@ -52,10 +53,10 @@
     "dotenv-webpack": "^6.0.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
     "html-minimizer-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "5.0.0-alpha.9",
+    "html-webpack-plugin": "5.0.0",
     "jest": "^26.6.3",
-    "less": "^4.1.0",
-    "less-loader": "^7.3.0",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
     "prettier": "^2.2.1",
     "redux-devtools-extension": "^2.13.8",
     "style-loader": "^2.0.0",
@@ -63,9 +64,11 @@
     "ts-jest": "^26.5.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.1.3",
-    "webpack": "^5.19.0",
-    "webpack-cli": "^4.4.0",
+    "webpack": "^5.20.1",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.7.3",
+    "worker-loader": "^3.0.7",
+    "worker-plugin": "^5.0.0"
   }
 }
