--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,7 @@
     ]
   ],
   "presets": [
-    ["@babel/preset-env", { "modules": false }],
+    ["@babel/preset-env"],
     "@babel/preset-react",
     "@babel/preset-typescript"
   ]
