--- a/package.json
+++ b/package.json
@@ -14,62 +14,62 @@
   "author": "lkuoch",
   "license": "MIT",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.0",
-    "lodash": "^4.17.20",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "redux": "^4.0.5",
-    "redux-api-middleware": "^3.2.1",
-    "redux-in-worker": "^0.7.0",
-    "typed-redux-saga": "^1.3.1"
+    "@reduxjs/toolkit": "1.6.2",
+    "lodash": "4.17.21",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.5",
+    "redux": "4.1.1",
+    "redux-api-middleware": "3.2.1",
+    "redux-in-worker": "0.8.0",
+    "typed-redux-saga": "1.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/plugin-transform-runtime": "^7.12.15",
-    "@babel/plugin-transform-typescript": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
-    "@babel/preset-react": "^7.12.13",
-    "@babel/preset-typescript": "^7.12.13",
-    "@babel/runtime": "^7.12.13",
-    "@types/compression-webpack-plugin": "^6.0.4",
-    "@types/css-minimizer-webpack-plugin": "^1.1.1",
-    "@types/jest": "^26.0.20",
-    "@types/lodash": "^4.14.168",
-    "@types/react": "^17.0.1",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.16",
-    "@types/redux-api-middleware": "^3.2.2",
-    "@types/redux-saga": "^0.10.5",
-    "@types/terser-webpack-plugin": "^5.0.2",
-    "@types/webpack": "^4.41.26",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-macros": "^3.0.1",
-    "brotli-webpack-plugin": "^1.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^7.1.2",
-    "css-loader": "^5.0.1",
-    "css-minimizer-webpack-plugin": "^1.2.0",
-    "dotenv-webpack": "^6.0.0",
-    "fork-ts-checker-webpack-plugin": "^6.1.0",
-    "html-minimizer-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "5.0.0",
-    "jest": "^26.6.3",
-    "less": "^4.1.1",
-    "less-loader": "^8.0.0",
-    "prettier": "^2.2.1",
-    "redux-devtools-extension": "^2.13.8",
-    "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.1.1",
-    "ts-jest": "^26.5.0",
-    "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "^4.1.3",
-    "webpack": "^5.20.2",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3",
-    "worker-loader": "^3.0.7",
-    "worker-plugin": "^5.0.0"
+    "@babel/core": "7.15.8",
+    "@babel/plugin-transform-runtime": "7.15.8",
+    "@babel/plugin-transform-typescript": "7.15.8",
+    "@babel/preset-env": "7.15.8",
+    "@babel/preset-react": "7.14.5",
+    "@babel/preset-typescript": "7.15.0",
+    "@babel/runtime": "7.15.4",
+    "@types/compression-webpack-plugin": "9.0.0",
+    "@types/css-minimizer-webpack-plugin": "3.0.2",
+    "@types/jest": "27.0.2",
+    "@types/lodash": "4.14.175",
+    "@types/react": "17.0.30",
+    "@types/react-dom": "17.0.9",
+    "@types/react-redux": "7.1.19",
+    "@types/redux-api-middleware": "3.2.3",
+    "@types/redux-saga": "0.10.5",
+    "@types/terser-webpack-plugin": "5.2.0",
+    "@types/webpack": "5.28.0",
+    "babel-loader": "8.2.2",
+    "babel-plugin-lodash": "3.3.4",
+    "babel-plugin-macros": "3.1.0",
+    "brotli-webpack-plugin": "1.1.0",
+    "clean-webpack-plugin": "4.0.0",
+    "compression-webpack-plugin": "9.0.0",
+    "css-loader": "6.4.0",
+    "css-minimizer-webpack-plugin": "3.1.1",
+    "dotenv-webpack": "7.0.3",
+    "fork-ts-checker-webpack-plugin": "6.3.5",
+    "html-minimizer-webpack-plugin": "3.3.0",
+    "html-webpack-plugin": "5.4.0",
+    "jest": "27.3.1",
+    "less": "4.1.2",
+    "less-loader": "10.2.0",
+    "prettier": "2.4.1",
+    "redux-devtools-extension": "2.13.9",
+    "style-loader": "3.3.0",
+    "terser-webpack-plugin": "5.2.4",
+    "ts-jest": "27.0.7",
+    "tsconfig-paths-webpack-plugin": "3.5.1",
+    "typescript": "4.4.4",
+    "webpack": "5.59.0",
+    "webpack-cli": "4.9.1",
+    "webpack-dev-server": "4.3.1",
+    "webpack-merge": "5.8.0",
+    "worker-loader": "3.0.8",
+    "worker-plugin": "5.0.1"
   }
 }
