--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
-    "start:prod": "webpack serve --config webpack/webpack.config.js --env env=prod",
-    "build": "webpack --config webpack/webpack.config.js --env env=dev",
-    "build:prod": "webpack --config webpack/webpack.config.js --env env=prod",
-    "test": "jest",
-    "format": "npx prettier --write src/"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "test": "jest"
   },
   "keywords": [],
   "author": "lkuoch",
@@ -25,51 +23,21 @@
     "typed-redux-saga": "1.3.1"
   },
   "devDependencies": {
-    "@babel/core": "7.15.8",
-    "@babel/plugin-transform-runtime": "7.15.8",
-    "@babel/plugin-transform-typescript": "7.15.8",
-    "@babel/preset-env": "7.15.8",
-    "@babel/preset-react": "7.14.5",
-    "@babel/preset-typescript": "7.15.0",
-    "@babel/runtime": "7.15.4",
-    "@types/compression-webpack-plugin": "9.0.0",
-    "@types/css-minimizer-webpack-plugin": "3.0.2",
     "@types/jest": "27.0.2",
-    "@types/lodash": "4.14.175",
-    "@types/react": "17.0.30",
-    "@types/react-dom": "17.0.9",
-    "@types/react-redux": "7.1.19",
+    "@types/lodash": "4.14.176",
+    "@types/react": "17.0.31",
+    "@types/react-dom": "17.0.10",
+    "@types/react-redux": "7.1.20",
     "@types/redux-api-middleware": "3.2.3",
     "@types/redux-saga": "0.10.5",
-    "@types/terser-webpack-plugin": "5.2.0",
-    "@types/webpack": "5.28.0",
-    "babel-loader": "8.2.2",
-    "babel-plugin-lodash": "3.3.4",
-    "babel-plugin-macros": "3.1.0",
-    "brotli-webpack-plugin": "1.1.0",
-    "clean-webpack-plugin": "4.0.0",
-    "compression-webpack-plugin": "9.0.0",
-    "css-loader": "6.4.0",
-    "css-minimizer-webpack-plugin": "3.1.1",
-    "dotenv-webpack": "7.0.3",
-    "fork-ts-checker-webpack-plugin": "6.3.5",
-    "html-minimizer-webpack-plugin": "3.3.0",
-    "html-webpack-plugin": "5.4.0",
+    "@vitejs/plugin-react-refresh": "1.3.6",
     "jest": "27.3.1",
-    "less": "4.1.2",
-    "less-loader": "10.2.0",
+    "less": "^4.1.2",
+    "msw": "^0.35.0",
     "prettier": "2.4.1",
     "redux-devtools-extension": "2.13.9",
-    "style-loader": "3.3.0",
-    "terser-webpack-plugin": "5.2.4",
-    "ts-jest": "27.0.7",
-    "tsconfig-paths-webpack-plugin": "3.5.1",
     "typescript": "4.4.4",
-    "webpack": "5.59.0",
-    "webpack-cli": "4.9.1",
-    "webpack-dev-server": "4.3.1",
-    "webpack-merge": "5.8.0",
-    "worker-loader": "3.0.8",
-    "worker-plugin": "5.0.1"
+    "vite": "2.6.10",
+    "vite-tsconfig-paths": "3.3.17"
   }
 }
