--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "msw": "^0.35.0",
     "prettier": "2.4.1",
     "redux-devtools-extension": "2.13.9",
+    "ts-jest": "^27.0.7",
     "typescript": "4.4.4",
     "vite": "2.6.10",
     "vite-tsconfig-paths": "3.3.17"
