--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -9,7 +9,7 @@
       "@Mock/*": ["./src/Mock/*"],
       "@Services/*": ["./src/Services/*"],
       "@Store/*": ["./src/Store/*"],
-      "@Styles/*": ["./src/Styles/*"],
+      "@Styles/*": ["./src/Styles/*"]
     }
   }
 }
