--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,13 +3,14 @@
     "baseUrl": ".",
     "paths": {
       "@Components/*": ["./src/Components/*"],
-      "@Core/*": ["./src/Core/*"],
+      "@Core/*": ["./src/Core/*", "./src/Core/index.ts"],
       "@Config": ["./src/Config/app.prod.json"],
       "@Middlewares/*": ["./src/Middlewares/*"],
       "@Mock/*": ["./src/Mock/*"],
       "@Services/*": ["./src/Services/*"],
       "@Store/*": ["./src/Store/*"],
-      "@Styles/*": ["./src/Styles/*"]
+      "@Styles/*": ["./src/Styles/*"],
+      "@Types": ["./src/types"]
     }
   }
 }
