--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
+    "allowJs": false,
     "allowSyntheticDefaultImports": true,
-    "downlevelIteration": true,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
     "jsx": "react",
-    "module": "ES6",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "module": "ESNext",
     "moduleResolution": "Node",
-    "outDir": "./dist/",
-    "pretty": true,
+    "noEmit": true,
     "resolveJsonModule": true,
-    "sourceMap": true,
+    "skipLibCheck": false,
     "strict": true,
-    "strictNullChecks": true,
-    "target": "ES6"
+    "target": "ESNext"
   },
-  "include": ["./src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["./src/**/*"]
 }
