--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "serve": "vite preview",
+    "serve": "vite build && vite preview",
     "test": "jest",
     "upgrade:msw": "npx msw init ./"
   },
@@ -14,11 +14,11 @@
   "license": "MIT",
   "dependencies": {
     "@reduxjs/toolkit": "1.6.2",
-    "@rtk-incubator/action-listener-middleware": "^0.1.0",
+    "@rtk-incubator/action-listener-middleware": "0.1.0",
     "lodash": "4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "7.2.5",
+    "react-redux": "7.2.6",
     "redux": "4.1.1",
     "redux-api-middleware": "3.2.1",
     "redux-in-worker": "0.8.0",
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@types/jest": "27.0.2",
     "@types/lodash": "4.14.176",
-    "@types/react": "17.0.31",
+    "@types/react": "17.0.33",
     "@types/react-dom": "17.0.10",
     "@types/react-redux": "7.1.20",
     "@types/redux-api-middleware": "3.2.3",
@@ -40,7 +40,7 @@
     "redux-devtools-extension": "2.13.9",
     "ts-jest": "^27.0.7",
     "typescript": "4.4.4",
-    "vite": "2.6.10",
+    "vite": "2.6.11",
     "vite-tsconfig-paths": "3.3.17"
   },
   "msw": {
