--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux": "4.1.1",
     "redux-api-middleware": "3.2.1",
     "redux-in-worker": "0.8.0",
+    "reselect": "4.1.0-beta.2",
     "typed-redux-saga": "1.3.1"
   },
   "devDependencies": {
@@ -38,7 +39,7 @@
     "msw": "^0.35.0",
     "prettier": "2.4.1",
     "redux-devtools-extension": "2.13.9",
-    "ts-jest": "^27.0.7",
+    "ts-jest": "27.0.7",
     "typescript": "4.4.4",
     "vite": "2.6.11",
     "vite-tsconfig-paths": "3.3.17"
