--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "vite",
     "build": "vite build",
     "serve": "vite build && vite preview",
+    "tsc": "tsc",
     "test": "jest",
     "upgrade:msw": "npx msw init ./"
   },
@@ -22,7 +23,7 @@
     "redux": "4.1.1",
     "redux-api-middleware": "3.2.1",
     "redux-in-worker": "0.8.0",
-    "reselect": "4.1.0-beta.2",
+    "reselect": "4.1.1",
     "typed-redux-saga": "1.3.1"
   },
   "devDependencies": {
@@ -41,7 +42,7 @@
     "redux-devtools-extension": "2.13.9",
     "ts-jest": "27.0.7",
     "typescript": "4.4.4",
-    "vite": "2.6.11",
+    "vite": "2.6.12",
     "vite-tsconfig-paths": "3.3.17"
   },
   "msw": {
