--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
     "redux": "4.1.1",
-    "redux-api-middleware": "3.2.1",
-    "redux-in-worker": "0.8.0",
-    "reselect": "4.1.1",
-    "typed-redux-saga": "1.3.1"
+    "reselect": "4.1.1"
   },
   "devDependencies": {
     "@types/jest": "27.0.2",
@@ -32,12 +29,10 @@
     "@types/react": "17.0.33",
     "@types/react-dom": "17.0.10",
     "@types/react-redux": "7.1.20",
-    "@types/redux-api-middleware": "3.2.3",
-    "@types/redux-saga": "0.10.5",
     "@vitejs/plugin-react-refresh": "1.3.6",
     "jest": "27.3.1",
-    "less": "^4.1.2",
-    "msw": "^0.35.0",
+    "less": "4.1.2",
+    "msw": "0.35.0",
     "prettier": "2.4.1",
     "redux-devtools-extension": "2.13.9",
     "ts-jest": "27.0.7",
