--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "reselect": "4.1.1"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.9",
     "@types/jest": "27.0.2",
     "@types/lodash": "4.14.176",
     "@types/react": "17.0.33",
     "@types/react-dom": "17.0.10",
     "@types/react-redux": "7.1.20",
     "@vitejs/plugin-react-refresh": "1.3.6",
+    "faker": "^5.5.3",
     "jest": "27.3.1",
     "less": "4.1.2",
     "msw": "0.35.0",
@@ -37,7 +39,7 @@
     "redux-devtools-extension": "2.13.9",
     "ts-jest": "27.0.7",
     "typescript": "4.4.4",
-    "vite": "2.6.12",
+    "vite": "2.6.13",
     "vite-tsconfig-paths": "3.3.17"
   },
   "msw": {
