fix: more cleaning

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -4,7 +4,8 @@
     "paths": {
       "@components/*": ["components/*", "components/index.tsx"],
       "@features/*": ["features/*", "features/index.ts"],
-      "@styles/*": ["Styles/*"],
+      "@styles/*": ["styles/*"],
+      "@utils/*": ["utils/*"],
       "@types": ["types"]
     }
   }
