--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": "./src/",
     "paths": {
-      "@components/*": ["components/*", "components/index.tsx"],
-      "@features/*": ["features/*", "features/index.ts"],
+      "@components/*": ["components/*"],
+      "@features/*": ["features/*"],
       "@styles/*": ["styles/*"],
       "@utils/*": ["utils/*"]
     }
