--- a/package.json
+++ b/package.json
@@ -14,24 +14,28 @@
   "author": "lkuoch",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "11.5.0",
+    "@emotion/styled": "11.3.0",
+    "@mui/icons-material": "5.0.5",
+    "@mui/material": "5.0.6",
     "@reduxjs/toolkit": "1.7.0-beta.0",
     "@rtk-incubator/action-listener-middleware": "0.1.0",
     "lodash": "4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.6",
-    "redux": "4.1.2",
+    "redux": "5.0.0-alpha.0",
     "reselect": "4.1.1"
   },
   "devDependencies": {
-    "@types/faker": "^5.5.9",
+    "@types/faker": "5.5.9",
     "@types/jest": "27.0.2",
     "@types/lodash": "4.14.176",
     "@types/react": "17.0.33",
     "@types/react-dom": "17.0.10",
     "@types/react-redux": "7.1.20",
     "@vitejs/plugin-react-refresh": "1.3.6",
-    "faker": "^5.5.3",
+    "faker": "5.5.3",
     "jest": "27.3.1",
     "less": "4.1.2",
     "msw": "0.35.0",
