--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "lodash": "4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "7.2.6",
+    "react-redux": "8.0.0-alpha.1",
     "redux": "5.0.0-alpha.0",
-    "reselect": "4.1.1"
+    "reselect": "4.1.2"
   },
   "devDependencies": {
     "@types/faker": "5.5.9",
     "@types/jest": "27.0.2",
     "@types/lodash": "4.14.176",
-    "@types/react": "17.0.33",
-    "@types/react-dom": "17.0.10",
+    "@types/react": "17.0.34",
+    "@types/react-dom": "17.0.11",
     "@types/react-redux": "7.1.20",
     "@vitejs/plugin-react-refresh": "1.3.6",
     "faker": "5.5.3",
