--- a/package.json
+++ b/package.json
@@ -14,32 +14,34 @@
   "author": "lkuoch",
   "license": "MIT",
   "dependencies": {
-    "@reduxjs/toolkit": "1.7.0-beta.0",
-    "@rtk-incubator/action-listener-middleware": "0.1.0",
+    "@reduxjs/toolkit": "1.7.0-rc.0",
+    "@rtk-incubator/action-listener-middleware": "0.4.0",
+    "jotai": "1.4.6",
     "lodash": "4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "3.34.0",
     "react-redux": "7.2.6",
     "redux": "4.1.2",
-    "reselect": "4.1.1"
+    "reselect": "4.1.5"
   },
   "devDependencies": {
     "@types/faker": "^5.5.9",
-    "@types/jest": "27.0.2",
-    "@types/lodash": "4.14.176",
-    "@types/react": "17.0.33",
-    "@types/react-dom": "17.0.10",
+    "@types/jest": "27.0.3",
+    "@types/lodash": "4.14.177",
+    "@types/react": "17.0.37",
+    "@types/react-dom": "17.0.11",
     "@types/react-redux": "7.1.20",
     "@vitejs/plugin-react-refresh": "1.3.6",
     "faker": "^5.5.3",
-    "jest": "27.3.1",
+    "jest": "27.4.3",
     "less": "4.1.2",
-    "msw": "0.35.0",
-    "prettier": "2.4.1",
+    "msw": "0.36.1",
+    "prettier": "2.5.1",
     "redux-devtools-extension": "2.13.9",
-    "ts-jest": "27.0.7",
-    "typescript": "4.4.4",
-    "vite": "2.6.13",
+    "ts-jest": "27.1.0",
+    "typescript": "4.5.2",
+    "vite": "2.7.1",
     "vite-tsconfig-paths": "3.3.17"
   },
   "msw": {
