--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "1.7.0-rc.0",
     "@rtk-incubator/action-listener-middleware": "0.4.0",
+    "fast-deep-equal": "3.1.3",
     "jotai": "1.4.6",
     "lodash": "4.17.21",
     "react": "17.0.2",
