--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "1.7.1",
     "@rtk-incubator/action-listener-middleware": "0.5.0",
+    "axios": "^0.24.0",
     "jotai": "1.4.8",
     "lodash": "4.17.21",
     "react": "17.0.2",
