--- a/package.json
+++ b/package.json
@@ -14,17 +14,12 @@
   "author": "lkuoch",
   "license": "MIT",
   "dependencies": {
-    "@reduxjs/toolkit": "1.7.1",
-    "@rtk-incubator/action-listener-middleware": "0.5.0",
-    "axios": "^0.24.0",
+    "axios": "0.24.0",
     "jotai": "1.4.8",
     "lodash": "4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "3.34.4",
-    "react-redux": "7.2.6",
-    "redux": "4.1.2",
-    "reselect": "4.1.5"
+    "react-query": "3.34.4"
   },
   "devDependencies": {
     "@types/faker": "5.5.9",
@@ -32,14 +27,12 @@
     "@types/lodash": "4.14.178",
     "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
-    "@types/react-redux": "7.1.20",
     "@vitejs/plugin-react-refresh": "1.3.6",
     "faker": "5.5.3",
     "jest": "27.4.5",
     "less": "4.1.2",
     "msw": "0.36.3",
     "prettier": "2.5.1",
-    "redux-devtools-extension": "2.13.9",
     "ts-jest": "27.1.2",
     "typescript": "4.5.4",
     "vite": "2.7.3",
