--- a/package.json
+++ b/package.json
@@ -14,20 +14,17 @@
   "author": "lkuoch",
   "license": "MIT",
   "dependencies": {
-    "axios": "0.24.0",
     "jotai": "1.4.8",
-    "lodash": "4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "3.34.4"
+    "react-query": "3.34.5"
   },
   "devDependencies": {
     "@types/faker": "5.5.9",
     "@types/jest": "27.0.3",
-    "@types/lodash": "4.14.178",
     "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
-    "@vitejs/plugin-react-refresh": "1.3.6",
+    "@vitejs/plugin-react": "1.1.3",
     "faker": "5.5.3",
     "jest": "27.4.5",
     "less": "4.1.2",
