--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
   },
   "devDependencies": {
     "@peeky/test": "0.9.3",
+    "@tailwindcss/typography": "0.5.0",
     "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
     "@vitejs/plugin-react": "1.1.3",
+    "autoprefixer": "10.4.0",
     "husky": "7.0.4",
     "less": "4.1.2",
     "lint-staged": "12.1.3",
     "msw": "0.36.3",
+    "postcss": "8.4.5",
     "prettier": "2.5.1",
     "typescript": "4.5.4",
     "vite": "2.7.5"
