--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "lkuoch",
   "license": "MIT",
   "dependencies": {
+    "@heroicons/react": "1.0.5",
     "jotai": "1.4.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -34,8 +35,9 @@
     "msw": "0.36.3",
     "postcss": "8.4.5",
     "prettier": "2.5.1",
+    "tailwindcss": "3.0.7",
     "typescript": "4.5.4",
-    "vite": "2.7.5"
+    "vite": "2.7.6"
   },
   "msw": {
     "workerDirectory": ""
