--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "advertisy",
   "version": "0.0.1",
   "description": "",
   "scripts": {
@@ -7,8 +7,9 @@
     "build": "vite build",
     "serve": "vite build && vite preview",
     "tsc": "tsc",
-    "test": "jest",
-    "msw": "npx msw init ./"
+    "test": "vitest",
+    "msw": "npx msw init ./",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "lkuoch",
@@ -20,22 +21,25 @@
     "react-query": "3.34.5"
   },
   "devDependencies": {
-    "@types/faker": "5.5.9",
-    "@types/jest": "27.0.3",
     "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
     "@vitejs/plugin-react": "1.1.3",
-    "faker": "5.5.3",
-    "jest": "27.4.5",
+    "happy-dom": "2.25.1",
+    "husky": "7.0.4",
     "less": "4.1.2",
+    "lint-staged": "12.1.3",
     "msw": "0.36.3",
     "prettier": "2.5.1",
-    "ts-jest": "27.1.2",
     "typescript": "4.5.4",
     "vite": "2.7.4",
-    "vite-tsconfig-paths": "3.3.17"
+    "vitest": "0.0.104"
   },
   "msw": {
     "workerDirectory": ""
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,css,md}": [
+      "prettier --write"
+    ]
   }
 }
