--- a/package.json
+++ b/package.json
@@ -16,22 +16,23 @@
   "author": "lkuoch",
   "license": "MIT",
   "dependencies": {
+    "@headlessui/react": "1.4.2",
     "@heroicons/react": "1.0.5",
     "jotai": "1.4.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "3.34.5"
+    "react-query": "3.34.6"
   },
   "devDependencies": {
     "@peeky/test": "0.9.3",
     "@tailwindcss/typography": "0.5.0",
-    "@types/react": "17.0.37",
+    "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
     "@vitejs/plugin-react": "1.1.3",
     "autoprefixer": "10.4.0",
     "husky": "7.0.4",
     "less": "4.1.2",
-    "lint-staged": "12.1.3",
+    "lint-staged": "12.1.4",
     "msw": "0.36.3",
     "postcss": "8.4.5",
     "prettier": "2.5.1",
