--- a/package.json
+++ b/package.json
@@ -16,29 +16,29 @@
   "author": "lkuoch",
   "license": "MIT",
   "dependencies": {
-    "@headlessui/react": "1.4.2",
+    "@chakra-ui/icons": "1.1.1",
+    "@chakra-ui/react": "1.7.3",
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
     "@heroicons/react": "1.0.5",
+    "framer-motion": "5.5.5",
     "jotai": "1.4.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "3.34.6"
+    "react-query": "3.34.7"
   },
   "devDependencies": {
     "@peeky/test": "0.9.3",
-    "@tailwindcss/typography": "0.5.0",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
     "@vitejs/plugin-react": "1.1.3",
-    "autoprefixer": "10.4.0",
     "husky": "7.0.4",
     "less": "4.1.2",
     "lint-staged": "12.1.4",
     "msw": "0.36.3",
-    "postcss": "8.4.5",
     "prettier": "2.5.1",
-    "tailwindcss": "3.0.7",
     "typescript": "4.5.4",
-    "vite": "2.7.6"
+    "vite": "2.7.9"
   },
   "msw": {
     "workerDirectory": ""
