--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "serve": "vite build && vite preview",
+    "start": "graphql-codegen && vite --mode development",
+    "start-staging": "graphql-codegen && vite --mode staging",
+    "start-prod": "graphql-codegen && vite --mode production",
+    "build": "graphql-codegen && vite --mode production build",
+    "serve": "graphql-codegen && vite --mode production build && vite preview",
     "tsc": "tsc",
     "test:open": "peeky open",
     "test": "peeky run",
@@ -16,28 +18,32 @@
   "author": "lkuoch",
   "license": "MIT",
   "dependencies": {
-    "@chakra-ui/react": "1.8.1",
+    "@chakra-ui/react": "1.8.3",
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
     "@heroicons/react": "1.0.5",
-    "framer-motion": "6.2.3",
-    "jotai": "1.5.3",
+    "framer-motion": "6.2.6",
+    "graphql": "16.3.0",
+    "jotai": "1.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "3.34.12"
+    "react-query": "3.34.15"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.1",
+    "@graphql-codegen/typescript": "2.4.3",
+    "@graphql-codegen/typescript-operations": "2.3.0",
     "@peeky/test": "0.11.2",
-    "@types/react": "17.0.38",
+    "@types/react": "17.0.39",
     "@types/react-dom": "17.0.11",
-    "@vitejs/plugin-react": "1.1.4",
+    "@vitejs/plugin-react": "1.2.0",
     "husky": "7.0.4",
     "less": "4.1.2",
-    "lint-staged": "12.3.2",
-    "msw": "0.36.7",
+    "lint-staged": "12.3.3",
+    "msw": "0.36.8",
     "prettier": "2.5.1",
     "typescript": "4.5.5",
-    "vite": "2.7.13"
+    "vite": "2.8.1"
   },
   "msw": {
     "workerDirectory": ""
