--- a/package.json
+++ b/package.json
@@ -18,32 +18,37 @@
   "author": "lkuoch",
   "license": "MIT",
   "dependencies": {
-    "@chakra-ui/react": "1.8.3",
-    "@emotion/react": "11.7.1",
-    "@emotion/styled": "11.6.0",
+    "@chakra-ui/react": "1.8.5",
+    "@emotion/react": "11.8.1",
+    "@emotion/styled": "11.8.1",
     "@heroicons/react": "1.0.5",
-    "framer-motion": "6.2.6",
+    "@reduxjs/toolkit": "1.7.2",
+    "@rtk-incubator/action-listener-middleware": "0.8.0",
+    "@rtk-query/graphql-request-base-query": "1.0.3",
+    "framer-motion": "6.2.8",
     "graphql": "16.3.0",
-    "jotai": "1.6.0",
+    "lodash": "4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "3.34.15"
+    "react-redux": "7.2.6"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.6.1",
-    "@graphql-codegen/typescript": "2.4.3",
-    "@graphql-codegen/typescript-operations": "2.3.0",
-    "@peeky/test": "0.11.2",
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "2.4.5",
+    "@graphql-codegen/typescript-operations": "2.3.2",
+    "@peeky/test": "0.13.2",
     "@types/react": "17.0.39",
     "@types/react-dom": "17.0.11",
     "@vitejs/plugin-react": "1.2.0",
+    "eslint": "8.9.0",
+    "eslint-config-prettier": "8.4.0",
     "husky": "7.0.4",
     "less": "4.1.2",
-    "lint-staged": "12.3.3",
-    "msw": "0.36.8",
+    "lint-staged": "12.3.4",
+    "msw": "0.38.1",
     "prettier": "2.5.1",
     "typescript": "4.5.5",
-    "vite": "2.8.1"
+    "vite": "2.8.4"
   },
   "msw": {
     "workerDirectory": ""
